Added subscription buying and viewing feature

--- a/app/src/main/res/layout/fragment_place_order.xml
+++ b/app/src/main/res/layout/fragment_place_order.xml
@@ -146,6 +146,7 @@
         android:layout_height="0dp"
         app:cardCornerRadius="20dp"
         android:elevation="20dp"
+        android:visibility="gone"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_h_guideline5"
         app:layout_constraintTop_toBottomOf="@+id/fragment_placeorder_h_guideline6"
@@ -228,7 +229,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:cardCornerRadius="20dp"
-        android:visibility=""
+        android:visibility="visible"
         android:elevation="20dp"
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/fragment_placeorder_h_guideline5"
