--- a/app/src/main/res/layout/activity_order_collection.xml
+++ b/app/src/main/res/layout/activity_order_collection.xml
@@ -476,8 +476,8 @@
                             android:background="@color/color_blue_light">
 
                             <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
                                 android:layout_margin="15dp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -510,7 +510,7 @@
                         android:id="@+id/activity_ordercollection_justwashdate_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Shirts | Trousers | Napkins | Anything small"
+                        android:text="Handkerchiefs | Underwear | Anything small"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
                         android:layout_marginStart="20dp"
@@ -545,13 +545,122 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_justwashquantity_textview"
-                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_justwashquantity_textview"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_justwashdate_textview"
                         app:layout_constraintVertical_bias="0.59000003" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
 
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/activity_ordercollection_formitemsholderscrollview_mediumweight_constraintlayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="3dp"
+                app:cardCornerRadius="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_justwash_constraintlayout"
+                app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline4"
+                app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline3">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/activity_ordercollection_formitemsholderscrollview_mediumweighticonholder_constraintlayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.13">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/color_blue_light">
+
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_margin="15dp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                android:src="@drawable/short_shirt" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <TextView
+                        android:id="@+id/activity_ordercollection_formitemsholderscrollview_mediumweightcollectionlabel_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="20dp"
+                        android:text="Mediumweight Items"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_mediumweighticonholder_constraintlayout"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/activity_ordercollection_mediumweightdate_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Shirts | Trousers | Towels | Anything medium"
+                        android:textColor="@color/color_gray"
+                        android:textSize="12sp"
+                        android:layout_marginStart="20dp"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_mediumweighticonholder_constraintlayout"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_mediumweightcollectionlabel_textview" />
+
+
+                    <TextView
+                        android:id="@+id/activity_ordercollection_mediumweightquantity_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:text="0 items"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_mediumweighticonholder_constraintlayout"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_mediumweightdate_textview"
+                        app:layout_constraintVertical_bias="0.0" />
+
+
+                    <ImageView
+                        android:id="@+id/activity_ordercollection_mediumweightediticon_imageview"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/edit_pencil"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.95"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_mediumweightquantity_textview"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_mediumweightdate_textview"
+                        app:layout_constraintVertical_bias="0.59000003" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/activity_ordercollection_formitemsholderscrollview_washandiron_constraintlayout"
@@ -563,7 +672,7 @@
                 android:visibility="gone"
                 app:cardCornerRadius="15dp"
                 app:layout_constraintBottom_toTopOf="@+id/activity_ordercollection_formitemsholderscrollview_justwashnonwearables_constraintlayout"
-                app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_justwash_constraintlayout"
+                app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_mediumweight_constraintlayout"
                 app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline4"
                 app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline3">
 
@@ -686,8 +795,8 @@
                             android:layout_height="match_parent"
                             android:background="@color/color_blue_light">
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:layout_margin="15dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -706,7 +815,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="20dp"
-                        android:text="Bulky Items"
+                        android:text="Heavyweight Items"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -754,7 +863,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_justwashnonwearablesquantity_textview"
-                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_justwashnonwearablesquantity_textview"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_justwashnonwearablesdate_textview"
                         app:layout_constraintVertical_bias="0.59000003" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -797,8 +906,8 @@
                             android:background="@color/color_blue_light">
 
                             <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
                                 android:layout_marginStart="14dp"
                                 android:layout_marginTop="17dp"
                                 android:layout_marginEnd="13dp"
@@ -870,7 +979,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_discountquantity_textview"
-                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_discountquantity_textview"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_discountdate_textview"
                         app:layout_constraintVertical_bias="0.59000003" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -912,8 +1021,8 @@
                             android:background="@color/color_blue_light">
 
                             <ImageView
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
                                 android:layout_marginStart="13dp"
                                 android:layout_marginTop="15dp"
                                 android:layout_marginEnd="17dp"
@@ -981,13 +1090,13 @@
                         android:id="@+id/activity_ordercollection_specialnotesediticon_imageview"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/edit_pencil"
                         android:layout_marginEnd="10dp"
+                        android:src="@drawable/edit_pencil"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.95"
                         app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_specialnotesquantity_textview"
-                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_specialnotesquantity_textview"
+                        app:layout_constraintTop_toTopOf="@+id/activity_ordercollection_specialnotesquantity_textview"
                         app:layout_constraintVertical_bias="0.59000003" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -1014,7 +1123,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/activity_ordercollection_proceedholder_button"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -1023,8 +1132,24 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_paid_button"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/activity_ordercollection_paid_button"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            android:background="@drawable/button_rounded_dull_pressed_white"
+            android:text="I PAID. FIND MY PAYMENT"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_proceedholder_button"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
