Made a lot of changes and forgot to commit and push

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,7 +138,7 @@
             android:id="@+id/activity_login_country_textview"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="Choose Country"
+            android:text="GHANA"
             android:textAlignment="center"
             android:background="@drawable/login_country_textview_background"
             android:gravity="center"
