--- a/app/src/main/res/layout/slider_layout_info1.xml
+++ b/app/src/main/res/layout/slider_layout_info1.xml
@@ -90,7 +90,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="LAUNDRY MADE EASY"
+        android:text="LAUNDRY SUBSCRIPTIONS"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -110,7 +110,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="We at MeMaww have put together this service to make it easy for you to get your laundry done. We hope you benefit and like this service at least half as much as we have loved to bring the service to you"
+        android:text="MeMaww offers affordable monthly subscriptions for your laundry to rival the cost of doing it yourself and save you even more time. We hope you benefit and like this service at least half as much as we have loved to bring it to you"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/slider_activity_slider_layout_guideline_h3"
