--- a/app/src/main/res/layout/activity_order_collection.xml
+++ b/app/src/main/res/layout/activity_order_collection.xml
@@ -127,6 +127,95 @@
                 app:layout_constraintGuide_percent="0.99" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/activity_ordercollection_formitemsholderscrollview_washtype_constraintlayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="15dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline4"
+                app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline3">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/activity_ordercollection_formitemsholderscrollview_washtypesiconholder_constraintlayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.13">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/color_blue_light">
+
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_marginStart="5dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:src="@drawable/info"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <TextView
+                        android:id="@+id/activity_ordercollection_formitemsholderscrollview_washtypescollectionlabel_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:text="How We Wash"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_washtypesiconholder_constraintlayout"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/activity_ordercollection_washtypesquantity_textview"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="We offer Machine Wash but if an item requires special care, we will reach out to inform and bill you."
+                        android:ellipsize="end"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_washtypesiconholder_constraintlayout"
+                        app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_washtypescollectionlabel_textview"/>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/activity_ordercollection_formitemsholderscrollview_pickup_constraintlayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -134,7 +223,7 @@
                 android:layout_marginBottom="5dp"
                 android:elevation="10dp"
                 app:cardCornerRadius="15dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/activity_ordercollection_formitemsholderscrollview_washtype_constraintlayout"
                 app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline4"
                 app:layout_constraintStart_toEndOf="@+id/activity_ordercollection_formitemsholderscrollview_v_guideline3">
 
@@ -209,6 +298,8 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:text="Not Set"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/color_gray"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -230,11 +321,14 @@
 
                     <TextView
                         android:id="@+id/activity_ordercollection_time_textview"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginTop="10dp"
                         android:text="Not Set"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/color_gray"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -476,14 +570,14 @@
                             android:background="@color/color_blue_light">
 
                             <ImageView
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_margin="15dp"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_margin="10dp"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                android:src="@drawable/short_shirt" />
+                                android:src="@drawable/lightweighticon" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -508,9 +602,9 @@
 
                     <TextView
                         android:id="@+id/activity_ordercollection_justwashdate_textview"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Handkerchiefs | Underwear | Anything small"
+                        android:text="Handkerchiefs | Underwear | Anything Under 0.1kg"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
                         android:layout_marginStart="20dp"
@@ -618,9 +712,9 @@
 
                     <TextView
                         android:id="@+id/activity_ordercollection_mediumweightdate_textview"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Shirts | Trousers | Towels | Anything medium"
+                        android:text="Shirts | Trousers | Anything Between 0.1kg - 0.7kg"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
                         android:layout_marginStart="20dp"
@@ -826,9 +920,9 @@
 
                     <TextView
                         android:id="@+id/activity_ordercollection_justwashnonwearablesdate_textview"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Duvets | Bedsheets | Blankets | Anything Big"
+                        android:text="Duvets | Bedsheets | Anything Above 0.8kg"
                         android:textColor="@color/color_gray"
                         android:textSize="12sp"
                         android:layout_marginStart="20dp"
@@ -960,6 +1054,8 @@
                         android:text="No discount applied"
                         android:textColor="@color/black"
                         android:textSize="16sp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/activity_ordercollection_discountediticon_imageview"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -1075,6 +1171,8 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="10dp"
                         android:text="No instructions given"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
