--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -120,7 +120,7 @@
 
     <Button
         android:id="@+id/update_activity_button1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textSize="15sp"
         android:layout_marginBottom="8dp"
@@ -128,7 +128,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button_rounded_green_pressed_white"
-        android:text="Update App"
+        android:text="Go To Play Store"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/update_activity_h_guideline4"
