--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -150,7 +150,6 @@
             android:text="$13"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:textStyle="bold"
             android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -182,7 +181,6 @@
             android:layout_marginTop="25dp"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/fragment_confirmorder_discounttotallabel_textview"
@@ -198,6 +196,7 @@
             android:layout_marginTop="25dp"
             android:textColor="@color/black"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/fragment_confirmorder_finaltotalvalue_textview"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -219,6 +218,21 @@
             app:layout_constraintStart_toEndOf="@+id/fragment_confirmorder_finaltotallabel_textview"
             app:layout_constraintTop_toBottomOf="@+id/fragment_confirmorder_discounttotalvalue_textview" />
 
+
+        <TextView
+            android:id="@+id/fragment_confirmorder_finalwashtype_textview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="Please know that this price is for just machine wash. If an item requires special care, we will contact you"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_confirmorder_finaltotalvalue_textview"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="@+id/fragment_confirmorder_finaltotallabel_textview"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_confirmorder_finaltotalvalue_textview" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/fragment_confirmorder_payonline_button"
             android:layout_width="0dp"
@@ -229,7 +243,7 @@
             android:layout_marginTop="50dp"
             app:layout_constraintEnd_toStartOf="@+id/fragment_confirmorder_guideline_v2"
             app:layout_constraintStart_toStartOf="@+id/fragment_confirmorder_guideline_v1"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_confirmorder_finaltotallabel_textview"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_confirmorder_finalwashtype_textview"
             app:layout_constraintVertical_bias="0.0" />
 
 
