--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -71,9 +71,10 @@
 
             <ImageView
                 android:id="@+id/fragment_profile_namemenuicon_imageview"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/user_round"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
@@ -122,7 +123,8 @@
                 android:id="@+id/fragment_profile_phonemenuicon_imageview"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/phone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
@@ -171,7 +173,8 @@
                 android:id="@+id/fragment_profile_addressmenuicon_imageview"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/pin_address"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
@@ -222,7 +225,8 @@
                 android:id="@+id/fragment_profile_emailmenuicon_imageview"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/email_address"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
@@ -341,6 +345,7 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="8dp"
                 android:src="@drawable/star"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintStart_toStartOf="parent"
