Updated remaining items front end text description

--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -71,7 +71,7 @@
                     android:layout_height="35dp"
                     android:layout_margin="10dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/cart_cross"
+                    android:src="@drawable/delivery_boxes"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -84,7 +84,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="11dp"
-                    android:text="My Unreturned Items"
+                    android:text="My Items"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -99,7 +99,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
-                    android:text="View items left behind after deliveries"
+                    android:text="See details of items picked, delivered and remaining"
                     android:textSize="14sp"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
